--- a/source/Fasciculus.Eve/Pages/LoadingPage.xaml
+++ b/source/Fasciculus.Eve/Pages/LoadingPage.xaml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:m="clr-namespace:Fasciculus.Eve.PageModels"
+             xmlns:pageModels="clr-namespace:Fasciculus.Eve.PageModels"
+             xmlns:fasciculus="http://fasciculus.github.io/2024/maui"
              x:Class="Fasciculus.Eve.Pages.LoadingPage"
-             x:DataType="m:LoadingPageModel"
+             x:DataType="pageModels:LoadingPageModel"
              Title="" Shell.NavBarIsVisible="False"
              Loaded="OnLoaded">
     
@@ -12,11 +13,11 @@
         <Label Text="Loading Resources..." HorizontalOptions="Center" />
         <Grid RowDefinitions="Auto" ColumnDefinitions="110,*,110,*,110,*" ColumnSpacing="16">
             <Label Text="Common Data" Grid.Row="0" Grid.Column="0" />
-            <Label Text="{Binding DataText}" TextColor="{Binding DataColor}" Grid.Row="0" Grid.Column="1" />
+            <fasciculus:WorkStateLabel Source="{Binding Data}" Grid.Row="0" Grid.Column="1" />
             <Label Text="Universe" Grid.Row="0" Grid.Column="2" />
-            <Label Text="{Binding UniverseText}" TextColor="{Binding UniverseColor}" Grid.Row="0" Grid.Column="3" />
+            <fasciculus:WorkStateLabel Source="{Binding Universe}" Grid.Row="0" Grid.Column="3" />
             <Label Text="Navigation" Grid.Row="0" Grid.Column="4" />
-            <Label Text="{Binding NavigationText}" TextColor="{Binding NavigationColor}" Grid.Row="0" Grid.Column="5" />
+            <fasciculus:WorkStateLabel Source="{Binding Navigation}" Grid.Row="0" Grid.Column="5" />
         </Grid>
     </VerticalStackLayout>
     
