--- a/source/Fasciculus.Eve/Resources/Styles/EveStyles.xaml
+++ b/source/Fasciculus.Eve/Resources/Styles/EveStyles.xaml
@@ -3,19 +3,28 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:fasciculus="http://fasciculus.github.io/2024/maui">
+    xmlns:fasciculus="http://fasciculus.github.io/2024/maui"
+    xmlns:eveControls="clr-namespace:Fasciculus.Eve.Pages.Controls">
 
-  <Style TargetType="fasciculus:LongProgressInfoBar">
-    <Setter Property="BackgroundColor" Value="LightGray" />
-    <Setter Property="MinimumHeightRequest" Value="8" />
-    <Setter Property="BusyColor" Value="#FFD0D000" />
-    <Setter Property="DoneColor" Value="LightGreen" />
-  </Style>
+    <Style TargetType="fasciculus:LongProgressInfoBar">
+        <Setter Property="BackgroundColor" Value="LightGray" />
+        <Setter Property="MinimumHeightRequest" Value="8" />
+        <Setter Property="BusyColor" Value="#FFD0D000" />
+        <Setter Property="DoneColor" Value="LightGreen" />
+    </Style>
 
-  <Style TargetType="fasciculus:WorkStateLabel">
-    <Setter Property="PendingColor" Value="#FFFF6060" />
-    <Setter Property="WorkingColor" Value="#FFD0D000" />
-    <Setter Property="DoneColor" Value="LightGreen" />
-  </Style>
+    <Style TargetType="fasciculus:WorkStateLabel">
+        <Setter Property="PendingColor" Value="#FFFF6060" />
+        <Setter Property="WorkingColor" Value="#FFD0D000" />
+        <Setter Property="DoneColor" Value="LightGreen" />
+    </Style>
+
+    <Style TargetType="eveControls:StatusBar">
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}" />
+        <Setter Property="FontFamily" Value="OpenSansRegular" />
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="ReadyColor" Value="DarkGreen" />
+        <Setter Property="ErrorColor" Value="DarkRed" />
+    </Style>
   
 </ResourceDictionary>
