--- a/source/Fasciculus.Eve/Resources/Styles/Styles.xaml
+++ b/source/Fasciculus.Eve/Resources/Styles/Styles.xaml
@@ -29,10 +29,11 @@
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="BorderWidth" Value="0"/>
-        <Setter Property="CornerRadius" Value="8"/>
-        <Setter Property="Padding" Value="14,10"/>
-        <Setter Property="MinimumHeightRequest" Value="44"/>
-        <Setter Property="MinimumWidthRequest" Value="44"/>
+        <Setter Property="CornerRadius" Value="2"/>
+        <Setter Property="Padding" Value="2,2"/>
+        <Setter Property="MinimumHeightRequest" Value="18"/>
+        <Setter Property="MaximumHeightRequest" Value="18"/>
+        <Setter Property="MinimumWidthRequest" Value="20"/>
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
