--- a/source/Fasciculus.Eve/Resources/Styles/Styles.xaml
+++ b/source/Fasciculus.Eve/Resources/Styles/Styles.xaml
@@ -147,7 +147,9 @@
         <Setter Property="BorderWidth" Value="0"/>
         <Setter Property="CornerRadius" Value="0"/>
         <Setter Property="MinimumHeightRequest" Value="44"/>
+        <Setter Property="MaximumHeightRequest" Value="44" />
         <Setter Property="MinimumWidthRequest" Value="44"/>
+        <Setter Property="MaximumWidthRequest" Value="44" />
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
