--- a/source/Fasciculus.Eve/Pages/MarketPage.xaml
+++ b/source/Fasciculus.Eve/Pages/MarketPage.xaml
@@ -4,13 +4,22 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:models="clr-namespace:Fasciculus.Eve.Models;assembly=Fasciculus.Eve.Core"
              xmlns:pageModels="clr-namespace:Fasciculus.Eve.PageModels"
-             xmlns:eveControls="clr-namespace:Fasciculus.Eve.Pages.Controls"
-             xmlns:eveConverters="clr-namespace:Fasciculus.Eve.Pages"
+             xmlns:views="clr-namespace:Fasciculus.Eve.Views"
              x:Class="Fasciculus.Eve.Pages.MarketPage"
              x:DataType="pageModels:MarketPageModel"
              Title="" Shell.NavBarIsVisible="False">
 
-    <ContentPage.Resources>
+    <FlexLayout Direction="Column">
+        <FlexLayout FlexLayout.Grow="1">
+            <views:NavBarView FlexLayout.Basis="44" />
+            <ScrollView FlexLayout.Grow="1" Padding="14">
+                <Label Text="Trades" />
+            </ScrollView>
+        </FlexLayout>
+        <views:StatusBarView FlexLayout.Shrink="1" />
+    </FlexLayout>
+
+    <!--<ContentPage.Resources>
         <Style x:Key="InvalidEntryStyle" TargetType="Entry">
             <Setter Property="TextColor" Value="Red" />
         </Style>
@@ -93,6 +102,6 @@
                 </CollectionView>
             </VerticalStackLayout>
         </HorizontalStackLayout>
-    </ScrollView>
+    </ScrollView>-->
 
 </ContentPage>
