--- a/source/Fasciculus.Eve/Pages/PlanetaryIndustryPage.xaml
+++ b/source/Fasciculus.Eve/Pages/PlanetaryIndustryPage.xaml
@@ -2,21 +2,22 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pageModels="clr-namespace:Fasciculus.Eve.PageModels"
-             xmlns:eveControls="clr-namespace:Fasciculus.Eve.Pages.Controls"
+             xmlns:views="clr-namespace:Fasciculus.Eve.Views"
              x:Class="Fasciculus.Eve.Pages.PlanetaryIndustryPage"
              x:DataType="pageModels:PlanetaryIndustryPageModel"
              Title="" Shell.NavBarIsVisible="False">
 
-    <HorizontalStackLayout HorizontalOptions="Fill">
-        <eveControls:SideBar BindingContext="{Binding SideBar}" />
-        <FlexLayout Direction="Column">
-            <ScrollView FlexLayout.Grow="1">
-                <Grid RowDefinitions="Auto" ColumnDefinitions="160,*" Padding="16">
-                    <Button Text="Start" Command="{Binding StartCommand}" Grid.Row="0" Grid.Column="0" />
-                </Grid>
+    <FlexLayout Direction="Column">
+        <FlexLayout FlexLayout.Grow="1">
+            <views:NavBarView FlexLayout.Basis="44" />
+            <ScrollView FlexLayout.Grow="1" Padding="14">
+                <VerticalStackLayout>
+                    <Label Text="Planets" />
+                    <Button Text="Start" Command="{Binding StartCommand}" />
+                </VerticalStackLayout>
             </ScrollView>
-            <eveControls:StatusBar Source="{Binding StatusBar}" Padding="16,8" />
         </FlexLayout>
-    </HorizontalStackLayout>
-    
+        <views:StatusBarView FlexLayout.Shrink="1" />
+    </FlexLayout>
+
 </ContentPage>
