--- a/source/Fasciculus.Eve/Views/NavBarView.xaml
+++ b/source/Fasciculus.Eve/Views/NavBarView.xaml
@@ -9,7 +9,7 @@
         <ImageButton Source="info.png" Command="{Binding GoToCommand}" CommandParameter="//Info" />
         <ImageButton Source="market.png" Command="{Binding GoToCommand}" CommandParameter="//Market" />
         <ImageButton Source="industry.png" Command="{Binding GoToCommand}" CommandParameter="//Industry" />
-        <ImageButton Source="planets.png" Command="{Binding GoToCommand}" CommandParameter="//PlanetaryIndustry" />
+        <ImageButton Source="planets.png" Command="{Binding GoToCommand}" CommandParameter="//Planets" />
         <ImageButton Source="map.png" Command="{Binding GoToCommand}" CommandParameter="//Map" />
     </VerticalStackLayout>
 
