--- a/source/Fasciculus.Eve/Pages/PlanetsPage.xaml
+++ b/source/Fasciculus.Eve/Pages/PlanetsPage.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pageModels="clr-namespace:Fasciculus.Eve.PageModels"
              xmlns:views="clr-namespace:Fasciculus.Eve.Views"
-             x:Class="Fasciculus.Eve.Pages.PlanetaryIndustryPage"
-             x:DataType="pageModels:PlanetaryIndustryPageModel"
+             x:Class="Fasciculus.Eve.Pages.PlanetsPage"
+             x:DataType="pageModels:PlanetsPageModel"
              Title="" Shell.NavBarIsVisible="False">
 
     <FlexLayout Direction="Column">
