--- a/source/Fasciculus.Eve/Resources/Styles/EveStyles.xaml
+++ b/source/Fasciculus.Eve/Resources/Styles/EveStyles.xaml
@@ -3,7 +3,8 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:fasciculus="http://fasciculus.github.io/2024/maui">
+    xmlns:fasciculus="http://fasciculus.github.io/2024/maui"
+    xmlns:controls="clr-namespace:Fasciculus.Eve.Controls">
 
     <Style TargetType="fasciculus:LongProgressInfoBar">
         <Setter Property="BackgroundColor" Value="LightGray" />
@@ -19,6 +20,13 @@
         <Setter Property="PendingColor" Value="#FFFF6060" />
         <Setter Property="WorkingColor" Value="#FFD0D000" />
         <Setter Property="DoneColor" Value="LightGreen" />
+    </Style>
+
+    <Style TargetType="controls:IskLabel">
+        <Setter Property="FontFamily" Value="OpenSansRegular" />
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}" />
+        <Setter Property="BackgroundColor" Value="Transparent" />
     </Style>
 
 </ResourceDictionary>
